Fix card spacing issue

--- a/style.css
+++ b/style.css
@@ -42,17 +42,17 @@ body, h1, h2, h3, h4, p, button, input {
 .card {
     border: 2px solid black;
     border-radius: 2px;
-    padding: 15px 25px;
-    display: flex;
-    flex-direction: column;
+    padding: 18px 25px;
+    display: grid;
+    grid-template-rows: 3fr 1fr;
     max-width: 400px;
-    height: 175px;
+    height: 100%;
 }
 
 .card h2 {
     font-size: 35px;
     font-weight: 400;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
 }
 
 .card h3 {
@@ -64,13 +64,15 @@ body, h1, h2, h3, h4, p, button, input {
 .card p {
     font-size: 15px;
     font-style: italic;
+    margin-bottom: 10px;
 }
 
 .book-info {
-    margin-bottom: 40px;
+    grid-row: 1 / 2;
 }
 
 .buttons {
+    grid-row: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
